# hassio-zophar

./: README.md  hacs.json  pyproject.toml
custom_components/zophar_browser/: __init__.py  config_flow.py  const.py  manifest.json  media_source.py
custom_components/zophar_browser/translations/: en.json
