[project]
name = "zophar-browser"
version = "1.0.0"
description = "Custom HACS component for browsing Zophar's Domain resources."
authors = [
  { name = "Sergey Dudanov", email = "sergey.dudanov@gmail.com" },
]
maintainers = [
  { name = "Sergey Dudanov", email = "sergey.dudanov@gmail.com" },
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "homeassistant >= 2024.10",
    "zophar >= 1.0",
]
keywords = [
  "zophar",
  "music",
  "console",
  "media_source",
  "browser",
  "homeassistant",
  "hacs",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
"Documentation" = "https://github.com/dudanov/hassio-zophar"
"Home Page" = "https://github.com/dudanov/hassio-zophar"
"Issue Tracker" = "https://github.com/dudanov/hassio-zophar/issues"
"Source Code" = "https://github.com/dudanov/hassio-zophar.git"

[tool.uv]
dev-dependencies = [
  "isort",
  "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 80

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"

[tool.isort]
line_length = 80
profile = "black"
